[FIX] story container overflow hidden

--- a/src/pages/index.module.scss
+++ b/src/pages/index.module.scss
@@ -36,4 +36,5 @@
   background: #fff;
   display: flex;
   justify-content: center;
+  overflow: hidden;
 }
